--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "browserify": "^13.1.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "reactify": "^1.1.1"
   },
   "devDependencies": {
     "jest-cli": "^14.1.0"
